2006-10-29 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/serial_IO.h: putchar() and getchar() using
	  serial port.

2006-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/malloc.h,
	* device/lib/calloc.c,
	* device/lib/free.c,
	* device/lib/malloc.c,
	* device/lib/realloc.c: moved definition of struct into sources
	* support/regression/tests/malloc.c: use void* for init_dynamic_memory()

2006-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/asx8051.dsp: corrected output directories
	* as/link/hc08: new directory for hc08 linker
	* as/hc08/aslink.h,             as/link/aslink.h,
	* as/hc08/aslink.mak,           as/link/hc08/aslink.mak,
	* as/hc08/clean.mk,             as/link/hc08/clean.mk,
	* as/hc08/link_hc08.dsp,        as/link/hc08/link_hc08.dsp,
	* as/hc08/lkaomf51.c,           as/link/hc08/lkaomf51.c,
	* as/hc08/lkarea.c,             as/link/hc08/lkarea.c,
	* as/hc08/lkdata.c,             as/link/hc08/lkdata.c,
	* as/hc08/lkelf.c,              as/link/hc08/lkelf.c,
	* as/hc08/lkihx.c,              as/link/hc08/lkihx.c,
	* as/hc08/lklibr.c,             as/link/hc08/lklibr.c,
	* as/hc08/lkmain.c,             as/link/hc08/lkmain.c,
	* as/hc08/lkmem.c,              as/link/hc08/lkmem.c,
	* as/hc08/lkrloc.c,             as/link/hc08/lkrloc.c,
	* as/hc08/lks19.c,              as/link/hc08/lks19.c,
	* as/hc08/Makefile.aslink,      as/link/hc08/Makefile.aslink,
	* as/hc08/Makefile.bcc,         as/link/hc08/Makefile.bcc,
	* as/hc08/Makefile.in,          as/link/hc08/Makefile.in,
	* as/link/hc08/conf.mk,
	* configure,
	* configure.in,
	* Makefile.in,
	* sdcc.dsw: moved hc08 linker to as/link/hc08
	* as/hc08/lkeval.c,     as/link/mcs51/lkeval.c,     as/link/lkeval.c,
	* as/hc08/lkhead.c,     as/link/mcs51/lkhead.c,     as/link/lkhead.c,
	* as/hc08/lklex.c,      as/link/mcs51/lklex.c,      as/link/lklex.c,
	* as/hc08/lklist.c,     as/link/mcs51/lklist.c,     as/link/lklist.c,